# fred-visualization

./: LICENSE  README.md  pyproject.toml  requirements.txt  sample.env
fred-visualization-app/: app.py  fred_categories.py  test_fred_app.py
